# Interview_support

./: .gitignore  BUILD_OPTIMIZATION_COMPLETE.md  DEPENDENCIES.md  DEPENDENCY_ANALYSIS.md  DEVELOPER.md  DEV_REQUIREMENTS.md  DISTRIBUTION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION_GUIDE.md  NODE_DEPENDENCIES.md  ONBOARDING_CHECKLIST.md  OPTIMIZATION_SUMMARY.md  README.md  REQUIREMENTS.md  REQUIREMENTS_SUMMARY.md  RUST_DEPENDENCIES.md  STATIC_CRT_CONFIGURATION.md  VERIFICATION_REPORT.md  WINDOW_HIDER_GUIDE.md  build_installer.bat  index-window-hider-example.html  index.html  package-lock.json  package.json  requirements.txt  setup.bat  tushar_installer.iss
releases/v2.0.0/: tushar_launcher.ahk
src/: main.ts  window_hider.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: lib.rs  main.rs  window_hider.rs
