[package]
name = "tushar"
version = "2.0.0"
edition = "2021"
description = "Lightweight window hiding tool with CLI and keyboard shortcuts"
authors = ["tushar"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
windows = { version = "0.54", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Console"
] }

[build-dependencies]
winresource = "0.1"

[[bin]]
name = "tushar"
path = "src/main.rs"

